fix: header aligned center

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -11,6 +11,7 @@
 .pr-header{
     margin: 0 0 4rem;
     font-size: 2.8rem;
+    text-align: center;
 }
 
 .project-card{
